--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,28 @@
-* {
+*, *::before, *::after {
+    padding: 0;
     margin: 0;
-    
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+
+.header {
+    padding-top: 250 px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.game{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 50vh;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
