--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,30 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 50vh;
+    height: 80vh;
+}
+
+.btn-grid {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 10 px;
+    margin-top: 20 px;
+}
+
+.btn{
+    background-color: hsl(200, 100%, 50%);
+    border: 1 px solid hsl(200, 100%, 30%);
+    border-radius: 5px;
+    padding: 10px 10px;
+    margin: 5px;
+}
+
+.btn:hover{
+    border-color: black;
 }
 
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
