--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,41 @@
 *, *::before, *::after {
+    box-sizing: border-box;
+    font-family:'Times New Roman', Times, serif;
+}
+
+body {
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
-    box-sizing: border-box;
-}
-
-.header {
-    padding-top: 250 px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.game{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 80vh;
+    height: 50vw;
+}
+
+.container {
+    width: 800px;
+    max-width: 80%;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px;
 }
 
 .btn-grid {
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 10 px;
-    margin-top: 20 px;
+    grid-template-columns: repeat(2,auto);
+    gap: 10px;
+    margin-top: 20px;
 }
 
-.btn{
-    background-color: hsl(200, 100%, 50%);
-    border: 1 px solid hsl(200, 100%, 30%);
+.btn {
+    background-color: lightblue;
+    border: 3px solid lightblue;
     border-radius: 5px;
-    padding: 10px 10px;
-    margin: 5px;
+    padding: 5px 10px;
+    outline: none;
 }
 
-.btn:hover{
-    border-color: black;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn:hover {
+    border: 3px solid black;
 }
